Fix line endings to LF